language/move-compiler/tests/move_check/parser/struct_without_fields.exp
error[E02008]: invalid 'struct' declaration
  ┌─ tests/move_check/parser/struct_without_fields.move:3:14
  │
3 │     struct S;
  │              ^ Expected struct body '{..}'

